# micro-service

./: LICENSE  pyproject.toml
apps/appc_tasks/: pyproject.toml
apps/appc_tasks/src/appc_tasks/: main.py  settings.py
apps/life_service/: README.md  pyproject.toml
package/common/: pyproject.toml
package/common/configs/: default.yaml
package/common/src/common/: configs.py  mixins.py  security.py  settings.py
package/common/src/common/connectors/: base.py  models.py  pool.py
package/common/src/common/connectors/connections/: base.py  http.py  py4jdbc.py  ssh.py
package/common/src/common/data/: converter.py  encoder.py  enums.py  generator.py  processor.py  schemes.py
package/common/src/common/db/: base.py  models.py  py4j_dbapi.py  py4j_dialect.py
package/common/src/common/files/: base.py  extend.py
package/common/src/common/loggers/: base.py  extend.py
package/common/src/common/utils/: configs.py  data.py  designs.py  files.py  loggers.py  schemes.py
package/common/tests/common/data/: test_converter.py  test_generator.py
package/common/tests/common/files/: test_base.py  test_extend.py
package/common/tests/common/loggers/: test_base.py  test_extend.py
