[tool.poetry]
name = "life-service"
version = "0.1.0"
description = ""
authors = ["HunCiDD <308997460@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
common = { path = "../../package/common", develop = true }  # 关键路径绑定


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"